fixed the mobile site alignment

--- a/src/components/personal_projects/PersonalProjects.css
+++ b/src/components/personal_projects/PersonalProjects.css
@@ -1,3 +1,7 @@
+h1 {
+  margin-bottom: 10px;
+}
+
 h2 {
   font-size: 1.09em;
   margin-top: 0px;
@@ -26,4 +30,10 @@ h2 a {
 
 .project-description {
   margin-bottom: 10px;
+}
+
+@media (max-width: 400px) {
+  .project-container {
+    margin-left: 0px;
+  }
 }
